# Installer

./: .gitignore  Cargo.toml  README.md  build.rs  umamusume.patch  umamusume.patch.zst  umamusume.rev.patch
.github/workflows/: build.yml  create-release.yml
assets/: installer.manifest  installer.rc
locales/: en-US.yml  zh-CN.yml  zh-TW.yml
src/: build.rs  cli.rs  gui.rs  i18n.rs  installer.rs  main.rs  resource.rs  updater.rs  utils.rs
