[package]
name = "hachimi_installer"
version = "2.0.1"
edition = "2021"

[profile.release]
lto = true

[dependencies]
tinyjson = "2.5"
pelite = "0.10"
include-bytes-zstd = { version = "0.1", optional = true }

[dependencies.windows]
version = "0.57"
features = [
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Diagnostics_ToolHelp"
]

[build-dependencies]
embed-resource = "2.4"
pelite = "0.10"
cc = "1.1"

[patch.crates-io]
embed-resource = { git = "https://github.com/nabijaczleweli/rust-embed-resource.git", rev = "e98e9aa28d66b0c2ff43516b41847cac372310dd" }

[features]
compress_dll = ["dep:include-bytes-zstd"]