[package]
name = "hachimi_installer"
version = "3.1.0"
edition = "2024"

[profile.release]
lto = true

[dependencies]
tinyjson = "2.5"
pelite = "0.10"
include-bytes-zstd = { version = "0.1", optional = true }
registry = "1.3"
bsdiff = "0.2.1"
sha2 = "0.10.9"
self_update = "0.42.0"
chrono = { version = "0.4", features = ["serde"] }
steamlocate = "=2.0.0-beta.0"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Controls"
]

[build-dependencies]
embed-resource = "2.4"
pelite = "0.10"
cc = "1.1"

[patch.crates-io]
embed-resource = { git = "https://github.com/nabijaczleweli/rust-embed-resource.git", rev = "e98e9aa28d66b0c2ff43516b41847cac372310dd" }

[features]
compress_dll = ["dep:include-bytes-zstd"]
